[package]
name = "ecrs"
version = "0.1.0-beta.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/ecrs-org/ecrs"
homepage = "https://github.com/ecrs-org/ecrs"
description = """
Evolutionary computation tools & algorithms
"""
keywords = ["evolution", "evolutionary", "algorithms", "genetic"]
categories = ["science"]
license-file = "LICENSE.md"
license = "MIT"
exclude = [
	".github/*",
	"Cargo.lock",
]


[lib]
name = "ecrs"
path = "src/lib.rs"


[dependencies]
rand = "0.8.5"
nalgebra = "0.30.1"
rayon = "1.5.2"
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
log = "0.4.17"
num = "0.4.0"
itertools = "0.10.2"
serde_json = "1.0.79"
push-trait = "0.6.0"

[dev-dependencies]
log4rs = "1.2.0"
criterion = "0.4"


[[bench]]
name = "aco_bench"
harness = false