[package]
name = "ecrs"
version = "0.1.0-beta.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/ecrs-org/ecrs"
homepage = "https://github.com/ecrs-org/ecrs"
description = """
Evolutionary computation tools & algorithms
"""
keywords = ["evolution", "evolutionary", "algorithms", "genetic"]
categories = ["science"]
license = "MIT OR Apache-2.0"
exclude = [".github/*", "Cargo.lock", "coco/"]

[workspace]
members = ["coco"]

[lib]
name = "ecrs"
path = "src/lib.rs"

[features]
default = ["ga"]
ga = ["test_functions", "dep:push-trait", "dep:len-trait", "dep:num-traits"]
aco = ["dep:nalgebra", "dep:num"]
ff = ["dep:rayon"]
pso = ["dep:rayon", "dep:num", "test_functions"]
test_functions = []


[dependencies]
rand = "0.8.5"
nalgebra = { version = "0.32.2", optional = true }
rayon = { version = "1.5.2", optional = true }
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
log = "0.4.17"
num = { version = "0.4.0", optional = true }
itertools = "0.10.2"
serde_json = "1.0.79"
push-trait = { version = "0.6.0", optional = true }
len-trait = { version = "0.6.1", optional = true }
num-traits = { version = "0.2.15", optional = true }


[dev-dependencies]
log4rs = "1.2.0"
criterion = "0.4"
clap = { version = "4.2.7", features = ["derive"] }


[[bench]]
name = "aco_bench"
harness = false
required-features = ["aco"]

[[bench]]
name = "ff_bench"
harness = false
required-features = ["ff"]
